# laranotes

./: .env.example  .gitignore  CLAUDE.md  README.md  composer.json  package.json
_journal/: 2026-04-16-markdown-preview-styling.md  2026-04-16-pr1-role-foundation.md  2026-04-16-pr2-through-pr5-roles-rollout.md  2026-04-16-pr6-pr7-tiptap-editor.md  2026-04-16-settings-repos-collab.md  2026-04-22-development-roadmap.md
app/Enums/: Role.php
app/Models/: Folder.php  Invite.php  Note.php  User.php
app/Policies/: FolderPolicy.php  NotePolicy.php
app/Providers/: AppServiceProvider.php  FortifyServiceProvider.php
app/Repositories/: EloquentFolderRepository.php  EloquentNoteRepository.php  FlatFileFolderRepository.php  FlatFileNoteRepository.php  FolderRepositoryInterface.php  NoteRepositoryInterface.php
app/Services/: CollabTokenService.php  SettingService.php
bootstrap/: app.php
collab-server/: .env.example  Cargo.toml
collab-server/src/: api.rs  auth.rs  config.rs  error.rs  main.rs  persistence.rs  room.rs  state.rs  ws.rs
collab-server/tests/: persistence_test.mjs  sync_test.mjs
config/: collab.php  fortify.php
database/factories/: UserFactory.php
database/migrations/: 2026_04_15_062657_create_folders_table.php  2026_04_15_062658_create_notes_table.php  2026_04_16_044122_create_settings_table.php  2026_04_16_090000_add_roles_and_folder_privacy.php  2026_04_16_120000_create_invites_table.php  2026_04_16_140000_create_impersonation_events_table.php
database/seeders/: DatabaseSeeder.php
resources/css/: app.css  dcs.css
routes/: api.php  web.php
(+67 files in other folders)
