[package]
name = "laranotes-collab"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
yrs = "0.18"
yrs-axum = "0.8"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
base64 = "0.22"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
dashmap = "6"
dotenvy = "0.15"
parking_lot = "0.12.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
